force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fw2__Payment_Center_Extension_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Payment Center Extension Settings</label>
</CustomObject>