force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Clone_Opportunity_Link_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw2__Clone_Opportunity_Link_To_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, original opportunity related to a recurring invoice will be cloned per invoice created (except the first invoice)</description>
    <label>Clone Opportunity</label>
    <type>Checkbox</type>
</CustomField>