force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Close_Opportunity_After_Payment__c.field-meta.xml
<CustomField>
    <fullName>fw2__Close_Opportunity_After_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Opportunity After Payment</label>
    <type>Checkbox</type>
</CustomField>