force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Copy_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>fw2__Copy_Item_Description__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Copy opportunity/quote/order line item description</inlineHelpText>
    <label>Copy Item Description</label>
    <type>Checkbox</type>
</CustomField>