force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Copy_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>fw2__Copy_Product_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Copy product description</inlineHelpText>
    <label>Copy Product Description</label>
    <type>Checkbox</type>
</CustomField>