force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Create_Invoice_On_Opportunity_Close_Won__c.field-meta.xml
<CustomField>
    <fullName>fw2__Create_Invoice_On_Opportunity_Close_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically create invoice (or recurring invoice) when opportunity is closed won.</inlineHelpText>
    <label>Create Invoice On Opportunity Close Won</label>
    <type>Checkbox</type>
</CustomField>