force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Default_Opp_Primary_Contact_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw2__Default_Opp_Primary_Contact_To_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Default opportunity primary contact as invoice contact</inlineHelpText>
    <label>Default Opp Primary Contact To Invoice</label>
    <type>Checkbox</type>
</CustomField>