force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Do_Not_Add_Default_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>fw2__Do_Not_Add_Default_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Add Default Line Item</label>
    <type>Checkbox</type>
</CustomField>