force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Do_Not_Copy_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>fw2__Do_Not_Copy_Line_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Copy Line Items</label>
    <type>Checkbox</type>
</CustomField>