force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Exclude_Non_Recurring_Items__c.field-meta.xml
<CustomField>
    <fullName>fw2__Exclude_Non_Recurring_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Non-Recurring Items</label>
    <type>Checkbox</type>
</CustomField>