force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Exclude_Non_Recurring_Items_During_Clone__c.field-meta.xml
<CustomField>
    <fullName>fw2__Exclude_Non_Recurring_Items_During_Clone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude Non-Recurring Items During Clone</label>
    <type>Checkbox</type>
</CustomField>