force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Group_Products_By_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>fw2__Group_Products_By_Product_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Products By Product Family</label>
    <type>Checkbox</type>
</CustomField>