force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Opportunity_Closed_Won_Stage__c.field-meta.xml
<CustomField>
    <fullName>fw2__Opportunity_Closed_Won_Stage__c</fullName>
    <label>Opportunity Closed Won Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>