force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Order_Invoice_Lines_By_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>fw2__Order_Invoice_Lines_By_Product_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Invoice Lines By Product Name</label>
    <type>Checkbox</type>
</CustomField>