force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Sync_If_Invoice_Exists__c.field-meta.xml
<CustomField>
    <fullName>fw2__Sync_If_Invoice_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync If Invoice Exists</label>
    <type>Checkbox</type>
</CustomField>