force-app/main/default/objects/fw2__Payment_Center_Extension_Settings__c/fields/fw2__Use_Quote_Number_As_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>fw2__Use_Quote_Number_As_Invoice_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Quote Number As Invoice Number</label>
    <type>Checkbox</type>
</CustomField>